boxes almost done

--- a/css/style.css
+++ b/css/style.css
@@ -1331,7 +1331,7 @@ Highlight Box
 article[id^="galleryItemContent"] {
   background-color: #2C343B;
   position: fixed;
-  top: 10%;
+  top: 0;
   width: 100%;
   height: auto;
   z-index: 901;
@@ -1339,6 +1339,7 @@ article[id^="galleryItemContent"] {
   margin: auto 0; }
   @media only screen and (min-width: 640px) {
     article[id^="galleryItemContent"] {
+      top: 10%;
       width: 90%;
       margin: auto auto auto 5%; } }
   @media only screen and (min-width: 768px) {
@@ -1356,15 +1357,22 @@ article[id^="galleryItemContent"] {
     right: 0;
     text-decoration: none;
     background-color: black;
-    padding: 1.5px 8px;
-    width: 1.5em;
-    height: 1.5em;
+    padding: 4.5px 12.5px;
+    width: 1.75em;
+    height: 1.75em;
+    font-size: 1.25em;
     display: block;
     font-weight: 400;
     color: white;
     opacity: .8;
     line-height: 1;
     z-index: 902; }
+    @media only screen and (min-width: 640px) {
+      article[id^="galleryItemContent"] .close {
+        width: 1.5em;
+        height: 1.5em;
+        padding: 1.5px 8px;
+        font-size: 1em; } }
     @media only screen and (min-width: 768px) {
       article[id^="galleryItemContent"] .close {
         clear: right;
@@ -1419,10 +1427,18 @@ article[id^="galleryItemContent"] {
         float: left;
         font-size: 1.1em; } }
   @media only screen and (min-width: 768px) {
-    article[id^="galleryItemContent"] p:last-of-type {
-      margin: 0 5% auto 2.5%;
-      clear: right;
-      float: right; } }
+    article[id^="galleryItemContent"] p:first-of-type {
+      padding-top: 0em; } }
+  article[id^="galleryItemContent"] p:last-of-type {
+    display: none; }
+    @media only screen and (min-width: 640px) {
+      article[id^="galleryItemContent"] p:last-of-type {
+        display: block; } }
+    @media only screen and (min-width: 768px) {
+      article[id^="galleryItemContent"] p:last-of-type {
+        margin: 0 5% auto 2.5%;
+        clear: right;
+        float: right; } }
   article[id^="galleryItemContent"] a[href^="http"] {
     text-decoration: none;
     text-align: center;
