--- a/scss/style.css
+++ b/scss/style.css
@@ -1587,7 +1587,7 @@ Highlight Box
 article[id^="galleryItemContent"] {
   background-color: #2C343B;
   position: fixed;
-  top: 10%;
+  top: 0;
   width: 100%;
   height: auto;
   z-index: 901;
@@ -1596,6 +1596,7 @@ article[id^="galleryItemContent"] {
   @media only screen and (min-width: 640px) {
     /* line 1561, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
     article[id^="galleryItemContent"] {
+      top: 10%;
       width: 90%;
       margin: auto auto auto 5%; } }
   @media only screen and (min-width: 768px) {
@@ -1607,7 +1608,7 @@ article[id^="galleryItemContent"] {
       width: 700px;
       clear: both;
       right: calc(50% - 350px); } }
-  /* line 1585, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  /* line 1586, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   article[id^="galleryItemContent"] .close {
     cursor: pointer;
     position: absolute;
@@ -1615,35 +1616,43 @@ article[id^="galleryItemContent"] {
     right: 0;
     text-decoration: none;
     background-color: black;
-    padding: 1.5px 8px;
-    width: 1.5em;
-    height: 1.5em;
+    padding: 4.5px 12.5px;
+    width: 1.75em;
+    height: 1.75em;
+    font-size: 1.25em;
     display: block;
     font-weight: 400;
     color: white;
     opacity: .8;
     line-height: 1;
     z-index: 902; }
+    @media only screen and (min-width: 640px) {
+      /* line 1586, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      article[id^="galleryItemContent"] .close {
+        width: 1.5em;
+        height: 1.5em;
+        padding: 1.5px 8px;
+        font-size: 1em; } }
     @media only screen and (min-width: 768px) {
-      /* line 1585, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      /* line 1586, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
       article[id^="galleryItemContent"] .close {
         clear: right;
         position: relative;
         float: right; } }
-  /* line 1610, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  /* line 1620, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   article[id^="galleryItemContent"] figure {
     width: 100%;
     margin-bottom: 0; }
     @media only screen and (min-width: 768px) {
-      /* line 1610, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      /* line 1620, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
       article[id^="galleryItemContent"] figure {
         background: green;
         width: 100%; } }
-    /* line 1619, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+    /* line 1629, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
     article[id^="galleryItemContent"] figure img {
       border-bottom: 1px solid black; }
       @media only screen and (min-width: 768px) {
-        /* line 1619, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+        /* line 1629, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
         article[id^="galleryItemContent"] figure img {
           width: 100%;
           float: right;
@@ -1651,7 +1660,7 @@ article[id^="galleryItemContent"] {
           margin-top: 4em;
           right: 0;
           margin-bottom: 2em; } }
-    /* line 1630, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+    /* line 1640, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
     article[id^="galleryItemContent"] figure figcaption {
       color: #FFF5F5;
       margin: 1.5em;
@@ -1659,7 +1668,7 @@ article[id^="galleryItemContent"] {
       font-weight: 600;
       letter-spacing: 1px; }
       @media only screen and (min-width: 768px) {
-        /* line 1630, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+        /* line 1640, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
         article[id^="galleryItemContent"] figure figcaption {
           margin: 0;
           width: 100%;
@@ -1669,7 +1678,7 @@ article[id^="galleryItemContent"] {
           margin-top: 1em;
           top: 0;
           text-align: center; } }
-  /* line 1650, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  /* line 1660, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   article[id^="galleryItemContent"] p {
     color: #FFF5F5;
     margin: 1.5em;
@@ -1678,7 +1687,7 @@ article[id^="galleryItemContent"] {
     letter-spacing: 1px;
     line-height: 115%; }
     @media only screen and (min-width: 768px) {
-      /* line 1650, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      /* line 1660, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
       article[id^="galleryItemContent"] p {
         padding: 0;
         line-height: 140%;
@@ -1687,12 +1696,23 @@ article[id^="galleryItemContent"] {
         float: left;
         font-size: 1.1em; } }
   @media only screen and (min-width: 768px) {
-    /* line 1675, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
-    article[id^="galleryItemContent"] p:last-of-type {
-      margin: 0 5% auto 2.5%;
-      clear: right;
-      float: right; } }
-  /* line 1683, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+    /* line 1678, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+    article[id^="galleryItemContent"] p:first-of-type {
+      padding-top: 0em; } }
+  /* line 1688, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  article[id^="galleryItemContent"] p:last-of-type {
+    display: none; }
+    @media only screen and (min-width: 640px) {
+      /* line 1688, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      article[id^="galleryItemContent"] p:last-of-type {
+        display: block; } }
+    @media only screen and (min-width: 768px) {
+      /* line 1688, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      article[id^="galleryItemContent"] p:last-of-type {
+        margin: 0 5% auto 2.5%;
+        clear: right;
+        float: right; } }
+  /* line 1701, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   article[id^="galleryItemContent"] a[href^="http"] {
     text-decoration: none;
     text-align: center;
@@ -1709,11 +1729,11 @@ article[id^="galleryItemContent"] {
     text-transform: uppercase;
     transition: all 2s;
     line-height: 50%; }
-    /* line 1700, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+    /* line 1718, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
     .no-touch article[id^="galleryItemContent"] a[href^="http"]:hover, .no-touch article[id^="galleryItemContent"] a[href^="http"]:focus {
       box-shadow: inset 20em 0 0.25px 0 #1a8b9d; }
     @media only screen and (min-width: 768px) {
-      /* line 1683, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      /* line 1701, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
       article[id^="galleryItemContent"] a[href^="http"] {
         clear: right;
         float: left;
@@ -1723,12 +1743,12 @@ article[id^="galleryItemContent"] {
 /* -------------------------------- 
 Forms
 -------------------------------- */
-/* line 1753, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1771, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 fieldset {
   border: none;
   padding: 1em; }
 
-/* line 1757, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1775, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 legend {
   display: block;
   padding: 1em;
@@ -1739,43 +1759,43 @@ legend {
   text-align: center;
   width: 100%; }
 
-/* line 1767, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1785, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 input, textarea {
   padding: 5px;
   width: 55%;
   border: solid 1px #999; }
 
-/* line 1772, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1790, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 input[type=checkbox], input[type=radio] {
   width: auto; }
 
-/* line 1775, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1793, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 .altLabel label {
   text-align: left;
   width: auto; }
 
-/* line 1779, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1797, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 #contactForm ol {
   list-style-type: none;
   margin: 0;
   padding: 0; }
 
-/* line 1784, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1802, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 #contactForm li {
   padding-bottom: .75em; }
 
-/* line 1787, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1805, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 #comments .radioSet li {
   display: inline-block;
   margin-right: 10px; }
 
-/* line 1791, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1809, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 .groupHeadline {
   font-weight: 300;
   border-bottom: solid 1px #999;
   margin-bottom: .4em; }
 
-/* line 1797, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1815, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 textarea {
   width: 95%;
   font-family: "Maven Pro", sans-serif;
@@ -1783,13 +1803,13 @@ textarea {
   min-height: 6em;
   margin-top: -2em; }
 
-/* line 1805, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1823, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 label {
   width: 30%;
   text-align: right;
   display: inline-block; }
 
-/* line 1811, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1829, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 button[type=submit] {
   cursor: pointer;
   display: block;
@@ -1803,14 +1823,14 @@ button[type=submit] {
   letter-spacing: 1px;
   text-transform: uppercase;
   transition: all 1.3s; }
-  /* line 1825, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  /* line 1843, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   button[type=submit]:hover, button[type=submit]:focus {
     box-shadow: inset 20em 0 0.25px 0 #b2d430; }
 
 /* -------------------------------- 
 Footer
 -------------------------------- */
-/* line 1835, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1853, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 footer {
   background: #2C343B;
   height: 20em;
@@ -1818,30 +1838,30 @@ footer {
   text-align: center;
   float: none; }
   @media only screen and (min-width: 1170px) {
-    /* line 1835, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+    /* line 1853, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
     footer {
       text-align: none; } }
-  /* line 1846, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  /* line 1864, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   footer .social {
     width: 100%;
     margin: auto; }
     @media only screen and (min-width: 1170px) {
-      /* line 1846, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      /* line 1864, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
       footer .social {
         padding-left: 16px;
         float: left; } }
-  /* line 1856, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  /* line 1874, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   footer .linkedin, footer .github, footer .codepen {
     display: inline-block; }
     @media only screen and (min-width: 1170px) {
-      /* line 1856, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      /* line 1874, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
       footer .linkedin, footer .github, footer .codepen {
         float: left; } }
-  /* line 1864, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  /* line 1882, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   footer div.linkedin, footer div.github, footer div.codepen {
     width: 30px;
     margin: 0 5px; }
-  /* line 1869, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  /* line 1887, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   footer div#logo-bottom {
     clear: both;
     width: 70px;
@@ -1849,20 +1869,20 @@ footer {
     margin: 0 auto 3em auto;
     padding-top: 1.5em; }
     @media only screen and (min-width: 1170px) {
-      /* line 1869, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      /* line 1887, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
       footer div#logo-bottom {
         float: left;
         margin: 0 0 0 16px;
         display: inline-block; } }
-  /* line 1883, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  /* line 1901, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   footer en {
     font-style: italic; }
-  /* line 1887, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  /* line 1905, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   footer p {
     color: #FFF5F5;
     line-height: 1.4;
     clear: both; }
-  /* line 1892, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  /* line 1910, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   footer p en {
     position: relative;
     font-size: 1em;
@@ -1870,19 +1890,19 @@ footer {
     line-height: 1.6;
     top: -30px; }
     @media only screen and (min-width: 1170px) {
-      /* line 1892, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      /* line 1910, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
       footer p en {
         text-align: left;
         display: inline-block;
         top: -50px;
         float: left;
         margin-left: 6em; } }
-  /* line 1908, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  /* line 1926, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   footer p:last-child {
     font-size: .9em;
     margin-top: 1.2em; }
     @media only screen and (min-width: 1170px) {
-      /* line 1908, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      /* line 1926, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
       footer p:last-child {
         float: right;
         margin-right: 16px; } }
@@ -1890,14 +1910,14 @@ footer {
 /* -------------------------------- 
 Javascript disabled
 -------------------------------- */
-/* line 1923, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1941, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 .no-js .hero-slider li {
   display: none; }
-  /* line 1926, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+  /* line 1944, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   .no-js .hero-slider li.selected {
     display: block; }
 
-/* line 1931, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+/* line 1949, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 .no-js .slider-nav {
   display: none; }
 
