--- a/css/style.css
+++ b/css/style.css
@@ -1192,7 +1192,8 @@ Gallery
     display: inline-block;
     width: 50%;
     z-index: 1;
-    position: relative; }
+    position: relative;
+    cursor: pointer; }
     @media only screen and (min-width: 640px) {
       .gallery .galleryItem {
         width: 33.33%; } }
