forms style start

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ Grid System
 Acknowledgement: Special thanks to it's author Alex Garcia, a classmate and one of my partners at our final project www.PlumageCSS.com, from which I took this grid. 
 -------------------------------- */
 /*CONTENT CONTAINER BASED ON 960PX*/
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400);
 .container {
   width: 100%;
   max-width: 960px;
@@ -1317,7 +1318,7 @@ Gallery
         color: black; } }
 
 /* -------------------------------- 
-Highlight Box
+Light Box
 -------------------------------- */
 #overlay {
   width: 100%;
@@ -1466,78 +1467,145 @@ article[id^="galleryItemContent"] {
         margin: 2.5% 12.5%; } }
 
 /* -------------------------------- 
-Forms
+Old Forms
 -------------------------------- */
-fieldset {
-  border: none;
-  padding: 1em; }
-
-legend {
-  display: block;
-  padding: 1em;
-  font-weight: 300;
-  font-size: 1.25em;
-  color: #2C343B;
-  border-bottom: solid 1px #1A8B9D;
-  text-align: center;
-  width: 100%; }
-
-input, textarea {
-  padding: 5px;
-  width: 55%;
-  border: solid 1px #999; }
-
-input[type=checkbox], input[type=radio] {
-  width: auto; }
-
-.altLabel label {
-  text-align: left;
-  width: auto; }
-
-#contactForm ol {
-  list-style-type: none;
-  margin: 0;
-  padding: 0; }
-
-#contactForm li {
-  padding-bottom: .75em; }
-
-#comments .radioSet li {
-  display: inline-block;
-  margin-right: 10px; }
-
-.groupHeadline {
-  font-weight: 300;
-  border-bottom: solid 1px #999;
-  margin-bottom: .4em; }
-
-textarea {
-  width: 95%;
-  font-family: "Maven Pro", sans-serif;
-  font-size: 1em;
-  min-height: 6em;
-  margin-top: -2em; }
-
-label {
-  width: 30%;
-  text-align: right;
-  display: inline-block; }
-
-button[type=submit] {
-  cursor: pointer;
-  display: block;
-  padding: 1.2em 1.4em;
-  margin: 1em auto 0;
-  background-color: rgba(204, 204, 204, 0.4);
-  border: solid 2px #b2d430;
-  color: rgba(0, 0, 0, 0.9);
-  font-size: 1.5rem;
-  font-weight: 700;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  transition: all 1.3s; }
-  button[type=submit]:hover, button[type=submit]:focus {
-    box-shadow: inset 20em 0 0.25px 0 #b2d430; }
+/* -------------------------------- 
+New Forms
+-------------------------------- */
+.formWrapper {
+  font-family: 'Lato', sans-serif;
+  background: #FFF5F5;
+  color: #b3aca7;
+  font-size: 25px; }
+  .formWrapper div.formHeader {
+    font-size: 1.3em;
+    position: relative;
+    margin: 75px 0 75px 0;
+    text-align: center;
+    letter-spacing: 7px; }
+  .formWrapper #form {
+    font-size: 1.5em;
+    position: relative;
+    width: 95%;
+    margin: 50px auto 100px auto; }
+    @media only screen and (min-width: 480px) {
+      .formWrapper #form {
+        width: 90%; } }
+    @media only screen and (min-width: 768px) {
+      .formWrapper #form {
+        width: 75%; } }
+    .formWrapper #form button[type=submit] {
+      cursor: pointer;
+      display: block;
+      padding: 1.2em 1.4em;
+      margin: 1em auto 0;
+      background-color: rgba(172, 164, 156, 0.2);
+      border: 1px solid #ACA49C;
+      color: #aca49c;
+      font-size: 1.5rem;
+      font-weight: 700;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      transition: all 1.3s; }
+      .formWrapper #form button[type=submit]:hover, .formWrapper #form button[type=submit]:focus {
+        box-shadow: inset 20em 0 0.25px 0 #aca49c;
+        color: #FFF5F5; }
+    .formWrapper #form input {
+      border: solid 1px #b3aca7;
+      border-bottom: none;
+      height: 50px;
+      padding: 0px 15px 0px 15px; }
+    .formWrapper #form textarea {
+      border: solid 1px #b3aca7;
+      height: 160px;
+      max-height: 160px;
+      padding: 15px; }
+    .formWrapper #form input, .formWrapper #form textarea {
+      font-family: 'Lato', sans-serif;
+      font-size: 0.6em;
+      width: 100%;
+      background: transparent;
+      outline: none;
+      color: #726659;
+      transition: all 0.3s ease-in-out;
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -ms-transition: all 0.3s ease-in-out;
+      /*    H O V E R     */
+      /*    F O C U S   >   P L A C E H O L D E R   */
+      /*    P L A C E H O L D E R   */ }
+      @media only screen and (min-width: 480px) {
+        .formWrapper #form input, .formWrapper #form textarea {
+          width: 95%; } }
+      @media only screen and (min-width: 768px) {
+        .formWrapper #form input, .formWrapper #form textarea {
+          font-size: .7em;
+          width: 100%; } }
+      .formWrapper #form input:hover, .formWrapper #form textarea:hover {
+        background: #b3aca7;
+        color: #FFF5F5;
+        /*    H O V E R   >   P L A C E H O L D E R   */
+        /*    H O V E R   >   F O C U S   >   P L A C E H O L D E R   */ }
+        .formWrapper #form input:hover::-webkit-input-placeholder, .formWrapper #form textarea:hover::-webkit-input-placeholder {
+          color: #FFF5F5; }
+          @media only screen and (min-width: 768px) {
+            .formWrapper #form input:hover::-webkit-input-placeholder, .formWrapper #form textarea:hover::-webkit-input-placeholder {
+              font-size: .7em; } }
+        .formWrapper #form input:hover::-moz-placeholder, .formWrapper #form textarea:hover::-moz-placeholder {
+          color: #FFF5F5; }
+          @media only screen and (min-width: 768px) {
+            .formWrapper #form input:hover::-moz-placeholder, .formWrapper #form textarea:hover::-moz-placeholder {
+              font-size: .7em; } }
+        .formWrapper #form input:hover::-ms-placeholder, .formWrapper #form textarea:hover::-ms-placeholder {
+          color: #FFF5F5; }
+          @media only screen and (min-width: 768px) {
+            .formWrapper #form input:hover::-ms-placeholder, .formWrapper #form textarea:hover::-ms-placeholder {
+              font-size: .7em; } }
+        .formWrapper #form input:hover::placeholder, .formWrapper #form textarea:hover::placeholder {
+          color: #FFF5F5; }
+          @media only screen and (min-width: 768px) {
+            .formWrapper #form input:hover::placeholder, .formWrapper #form textarea:hover::placeholder {
+              font-size: .7em; } }
+        .formWrapper #form input:hover:focus::-webkit-input-placeholder, .formWrapper #form textarea:hover:focus::-webkit-input-placeholder {
+          color: black; }
+        .formWrapper #form input:hover:focus::-moz-placeholder, .formWrapper #form textarea:hover:focus::-moz-placeholder {
+          color: black; }
+        .formWrapper #form input:hover:focus::-ms-placeholder, .formWrapper #form textarea:hover:focus::-ms-placeholder {
+          color: black; }
+        .formWrapper #form input:hover:focus::placeholder, .formWrapper #form textarea:hover:focus::placeholder {
+          color: black; }
+      .formWrapper #form input:focus::-webkit-input-placeholder, .formWrapper #form textarea:focus::-webkit-input-placeholder {
+        color: black; }
+      .formWrapper #form input:focus::-moz-placeholder, .formWrapper #form textarea:focus::-moz-placeholder {
+        color: black; }
+      .formWrapper #form input:focus::-ms-placeholder, .formWrapper #form textarea:focus::-ms-placeholder {
+        color: black; }
+      .formWrapper #form input:focus::placeholder, .formWrapper #form textarea:focus::placeholder {
+        color: black; }
+      .formWrapper #form input::-webkit-input-placeholder, .formWrapper #form textarea::-webkit-input-placeholder {
+        color: #ACA49C;
+        font-size: .6em; }
+        @media only screen and (min-width: 768px) {
+          .formWrapper #form input::-webkit-input-placeholder, .formWrapper #form textarea::-webkit-input-placeholder {
+            font-size: .7em; } }
+      .formWrapper #form input::-moz-placeholder, .formWrapper #form textarea::-moz-placeholder {
+        color: #ACA49C;
+        font-size: .6em; }
+        @media only screen and (min-width: 768px) {
+          .formWrapper #form input::-moz-placeholder, .formWrapper #form textarea::-moz-placeholder {
+            font-size: .7em; } }
+      .formWrapper #form input::-ms-placeholder, .formWrapper #form textarea::-ms-placeholder {
+        color: #ACA49C;
+        font-size: .6em; }
+        @media only screen and (min-width: 768px) {
+          .formWrapper #form input::-ms-placeholder, .formWrapper #form textarea::-ms-placeholder {
+            font-size: .7em; } }
+      .formWrapper #form input::placeholder, .formWrapper #form textarea::placeholder {
+        color: #ACA49C;
+        font-size: .6em; }
+        @media only screen and (min-width: 768px) {
+          .formWrapper #form input::placeholder, .formWrapper #form textarea::placeholder {
+            font-size: .7em; } }
 
 /* -------------------------------- 
 Footer
