--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -4,15 +4,13 @@ $color-black: #2C343B;
 $color-blue: #1A8B9D;
 $color-green: #B2D430;
 $color-white: #FFF5F5;
+$color-softGray: #ACA49C;
 
 // fonts 
 
 $font-0: 'Oswald', sans-serif;
 $font-1: 'Maven Pro', sans-serif;
 $font-2: 'Droid Serif', serif;
-
-//$font-2: 'IntroInline', sans-serif;
-
 
 // header height 
 
