--- a/scss/style.scss
+++ b/scss/style.scss
@@ -156,6 +156,7 @@ html {
 body {
 	font: {
 		size: 1.6rem;
+//      size: 25.6px;
 		family: $font-1; 
 	}
 	color: $color-black;
@@ -1545,7 +1546,7 @@ Gallery
 }
 
 /* -------------------------------- 
-Highlight Box
+Light Box
 -------------------------------- */
 
 #overlay {
@@ -1729,122 +1730,242 @@ article[id^="galleryItemContent"] {
     }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* -------------------------------- 
+Old Forms
+-------------------------------- */
+//fieldset {
+//    border: none;
+//    padding: 1em;
+//}
+//legend {
+//    display: block;
+//    padding: 1em;
+//    font-weight: 300;
+//    font-size: 1.25em;
+//    color:$color-black;
+//    border-bottom: solid 1px $color-blue;
+//    text-align: center;
+//    width: 100%;
+//}
+//input, textarea {
+//    padding: 5px;
+//    width: 55%;
+//    border:solid 1px #999;
+//}
+//input[type=checkbox], input[type=radio] {
+//    width: auto;
+//}
+//.altLabel label {
+//    text-align: left;
+//    width: auto;
+//}
+//#contactForm ol {
+//    list-style-type: none;
+//    margin: 0;
+//    padding: 0;
+//}
+//#contactForm li {
+//    padding-bottom: .75em;
+//}
+//#comments .radioSet li {
+//    display: inline-block;
+//    margin-right: 10px;
+//}
+//.groupHeadline {
+//    font-weight: 300;
+//    border-bottom: solid 1px #999;
+//    margin-bottom: .4em;
+//}
+//
+//textarea {
+//    width: 95%;
+//    font-family: $font-1;
+//    font-size: 1em;
+//    min-height: 6em;
+//    margin-top: -2em;
+//}
+//
+//label {
+//    width: 30%;
+//    text-align: right;
+//    display: inline-block;
+//}
 
 /* -------------------------------- 
-Forms
+New Forms
 -------------------------------- */
-fieldset {
-    border: none;
-    padding: 1em;
-}
-legend {
-    display: block;
-    padding: 1em;
-    font-weight: 300;
-    font-size: 1.25em;
-    color:$color-black;
-    border-bottom: solid 1px $color-blue;
-    text-align: center;
-    width: 100%;
-}
-input, textarea {
-    padding: 5px;
-    width: 55%;
-    border:solid 1px #999;
-}
-input[type=checkbox], input[type=radio] {
-    width: auto;
-}
-.altLabel label {
-    text-align: left;
-    width: auto;
-}
-#contactForm ol {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-#contactForm li {
-    padding-bottom: .75em;
-}
-#comments .radioSet li {
-    display: inline-block;
-    margin-right: 10px;
-}
-.groupHeadline {
-    font-weight: 300;
-    border-bottom: solid 1px #999;
-    margin-bottom: .4em;
-}
 
-textarea {
-    width: 95%;
-    font-family: $font-1;
-    font-size: 1em;
-    min-height: 6em;
-    margin-top: -2em;
-}
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400);
 
-label {
-    width: 30%;
-    text-align: right;
-    display: inline-block;
-}
+.formWrapper {
+    font-family: 'Lato', sans-serif;
+    background: $color-white;
+    color: #b3aca7;
+    font-size: 25px;
+    //background: yellow;
+    
+    div.formHeader {
+        font-size: 1.3em;
+        position: relative;
+        margin: 75px 0 75px 0;
+        text-align: center;
+        letter-spacing: 7px;
+    }
+    
+    #form {
+        font-size: 1.5em;
+        position: relative;
+        width: 95%;
+        margin: 50px auto 100px auto;
+        //background: red;
+        @include MQ(S) {
+            width: 90%;
+        }
+        @include MQ(M) {
+            width: 75%;
+        }
+        button[type=submit] {
+            cursor:pointer;
+            display: block;
+            padding: 1.2em 1.4em;
+            margin: 1em auto 0;
+            background-color: rgba(#aca49c, .2);
+            border: 1px solid $color-softGray;
+            color: rgba($color-softGray, 1);
+            font-size: 1.5rem;
+            font-weight: 700;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            transition: all 1.3s;
+            &:hover, &:focus {
+                box-shadow: inset 20em 0 .25px 0 rgba($color-softGray, 1);
+                color: $color-white;
+            }
+        }
+        input {
+            border: solid 1px #b3aca7;
+            border-bottom: none;
+            height: 50px;
+            padding: 0px 15px 0px 15px;
+        }
+        textarea {
+            border: solid 1px #b3aca7;
+            height: 160px;
+            max-height: 160px;
+            padding: 15px;
+        }
+        input, textarea {
+            font-family: 'Lato', sans-serif;
+            font-size: 0.6em;
+            width: 100%;
+            //max-width: 470px;
+            background: transparent;
+            outline: none;
+            color: #726659;
+            transition: all 0.3s ease-in-out;
+            -webkit-transition: all 0.3s ease-in-out;
+            -moz-transition: all 0.3s ease-in-out;
+            -ms-transition: all 0.3s ease-in-out;
+            @include MQ(S) {
+                width: 95%;
+            }
+            @include MQ(M) {
+                font-size: .7em;
+                width: 100%;
+            }
 
-button[type=submit] {
-        cursor:pointer;
-		display: block;
-		padding: 1.2em 1.4em;
-        margin: 1em auto 0;
-        background-color: rgba(#ccc, .4);
-        border: solid 2px rgba($color-green, 1);
-        color: rgba(#000, .9);
-		font-size: 1.5rem;
-		font-weight: 700;
-		letter-spacing: 1px;
-		text-transform: uppercase;
-        transition: all 1.3s;
-        
-		&:hover, &:focus {
-            box-shadow: inset 20em 0 .25px 0 rgba($color-green, 1);
-		}
-	}
+            /*    H O V E R     */
+            &:hover {
+                background: #b3aca7;
+                color: $color-white;
+
+                /*    H O V E R   >   P L A C E H O L D E R   */
+                &::-webkit-input-placeholder {
+                    color: $color-white;
+                    @include MQ(M) {
+                        font-size: .7em;
+                    }
+                }
+                &::-moz-placeholder {
+                    color: $color-white;
+                    @include MQ(M) {
+                        font-size: .7em;
+                    }
+                }
+                &::-ms-placeholder {
+                    color: $color-white;
+                    @include MQ(M) {
+                        font-size: .7em;
+                    }
+                }
+                &::placeholder {
+                    color: $color-white;
+                    @include MQ(M) {
+                        font-size: .7em;
+                    }
+                }        
+
+                /*    H O V E R   >   F O C U S   >   P L A C E H O L D E R   */
+                &:focus::-webkit-input-placeholder {
+                    color: black;
+                }
+                &:focus::-moz-placeholder {
+                    color: black;
+                }
+                &:focus::-ms-placeholder {
+                    color: black;
+                }
+                &:focus::placeholder {
+                    color: black;
+                }        
+            }
+
+            /*    F O C U S   >   P L A C E H O L D E R   */
+            &:focus::-webkit-input-placeholder {
+                    color: black;
+            }
+            &:focus::-moz-placeholder {
+                    color: black;
+            }
+            &:focus::-ms-placeholder {
+                    color: black;
+            }
+            &:focus::placeholder {
+                    color: black;
+            }  
+
+            /*    P L A C E H O L D E R   */
+            &::-webkit-input-placeholder {
+                color: $color-softGray;
+                font-size: .6em;
+                @include MQ(M) {
+                font-size: .7em;
+                }
+            }
+            &::-moz-placeholder {
+                color: $color-softGray;
+                font-size: .6em;
+                @include MQ(M) {
+                font-size: .7em;
+                }
+            }    
+            &::-ms-placeholder {
+                color: $color-softGray;
+                font-size: .6em;
+                @include MQ(M) {
+                font-size: .7em;
+                }
+            }
+            &::placeholder {
+                color: $color-softGray;
+                font-size: .6em;
+                @include MQ(M) {
+                font-size: .7em;
+                }
+            }
+        }
+    }
+}
 
 
 /* -------------------------------- 
