--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1842,12 +1842,14 @@ New Forms
                 color: $color-white;
             }
         }
+        
         input {
             border: solid 1px #b3aca7;
             border-bottom: none;
             height: 50px;
-            padding: 0px 15px 0px 15px;
+            padding: 0 15px 0 15px;
         }
+        
         textarea {
             border: solid 1px #b3aca7;
             height: 160px;
@@ -1855,6 +1857,9 @@ New Forms
             padding: 15px;
         }
         input, textarea {
+            -webkit-appearance: none;
+            -webkit-border-radius:0px;           border-radius: 0;
+            
             font-family: 'Lato', sans-serif;
             font-size: 0.6em;
             width: 100%;
